--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "refurbed-backend-test",
+  "name": "node-express-js-clustering-module",
   "version": "1.0.0",
-  "description": "",
+  "description": "node-express-js-clustering-module",
   "main": "index.js",
   "scripts": {
     "test": "jest",
